# workspace/PetStoreService/public/swagger.yaml
@@ -125,6 +125,37 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+    patch:
+      description: "update a single pet base don the ID supplied"
+      operationId: "updatePet"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of pet to update"
+        required: true
+        schema:
+          type: "integer"
+          format: "int64"
+      requestBody:
+        description: "Pet to add to the store"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/NewPet"
+      responses:
+        200:
+          description: "pet response"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pet"
+        default:
+          description: "unexpected error"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
 components:
   schemas:
     Pet:
